force-app/main/default/objects/Supply_Agreement__c/Supply_Agreement__c.object-meta.xml
<CustomObject>
    <label>Supply Agreement</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Supply Agreement</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supply Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>