force-app/main/default/objects/Supply_Agreement__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Supply Agreements</relationshipLabel>
    <relationshipName>Supply_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>