force-app/main/default/objects/Supply_Agreement__c/fields/Commodity__c.field-meta.xml
<CustomField>
    <fullName>Commodity__c</fullName>
    <description>Type of commodity (Crude, Gas, Refined, NGL)</description>
    <label>Commodity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Crude</fullName>
            </value>
            <value>
                <fullName>Gas</fullName>
            </value>
            <value>
                <fullName>NGL</fullName>
            </value>
            <value>
                <fullName>Refined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>