force-app/main/default/objects/Supply_Agreement__c/fields/Commodity_v2__c.field-meta.xml
<CustomField>
    <fullName>Commodity_v2__c</fullName>
    <description>Type of commodity (Crude, Gas, Refined, NGL, Diesel, Jet Fuel, Heating Oil)</description>
    <label>Commodity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Crude</fullName>
            </value>
            <value>
                <fullName>Gas</fullName>
            </value>
            <value>
                <fullName>NGL</fullName>
            </value>
            <value>
                <fullName>Refined</fullName>
            </value>
            <value>
                <fullName>Diesel</fullName>
            </value>
            <value>
                <fullName>Jet Fuel</fullName>
            </value>
            <value>
                <fullName>Heating Oil</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>