force-app/main/default/objects/Supply_Agreement__c/fields/Current_Price__c.field-meta.xml
<CustomField>
    <fullName>Current_Price__c</fullName>
    <label>Current Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>