force-app/main/default/objects/Supply_Agreement__c/fields/Last_Sync_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Last_Sync_DateTime__c</fullName>
    <description>When the price was last synced from external API</description>
    <label>Last Sync Date/Time</label>
    <type>DateTime</type>
</CustomField>