force-app/main/default/objects/Supply_Agreement__c/fields/Previous_Price__c.field-meta.xml
<CustomField>
    <fullName>Previous_Price__c</fullName>
    <description>Price from last sync for comparison and trend analysis</description>
    <label>Previous Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>