force-app/main/default/objects/Supply_Agreement__c/fields/Price_Basis__c.field-meta.xml
<CustomField>
    <fullName>Price_Basis__c</fullName>
    <label>Price Basis</label>
    <type>Text</type>
    <length>255</length>
</CustomField>