force-app/main/default/objects/Supply_Agreement__c/fields/Price_Benchmark__c.field-meta.xml
<CustomField>
    <fullName>Price_Benchmark__c</fullName>
    <description>Which price benchmark is used (WTI, Brent, HH, TTF, JKM, etc.)</description>
    <label>Price Benchmark</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>WTI</fullName>
                <label>WTI (West Texas Intermediate)</label>
            </value>
            <value>
                <fullName>Brent</fullName>
                <label>Brent Crude</label>
            </value>
            <value>
                <fullName>HH</fullName>
                <label>Henry Hub Natural Gas</label>
            </value>
            <value>
                <fullName>TTF</fullName>
                <label>TTF (Title Transfer Facility)</label>
            </value>
            <value>
                <fullName>JKM</fullName>
                <label>JKM (Japan Korea Marker)</label>
            </value>
            <value>
                <fullName>Dubai</fullName>
                <label>Dubai Crude</label>
            </value>
            <value>
                <fullName>NYMEX</fullName>
            </value>
            <value>
                <fullName>Platts</fullName>
            </value>
            <value>
                <fullName>OPIS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>