force-app/main/default/objects/Supply_Agreement__c/fields/Price_Change__c.field-meta.xml
<CustomField>
    <fullName>Price_Change__c</fullName>
    <description>Percentage change from previous price to current price</description>
    <formula>IF( AND( NOT(ISBLANK(Previous_Price__c)), NOT(ISBLANK(Current_Price__c)), Previous_Price__c &lt;&gt; 0 ), ((Current_Price__c - Previous_Price__c) / Previous_Price__c) * 100, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Change %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>