force-app/main/default/objects/Supply_Agreement__c/fields/Price_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Price_Frequency__c</fullName>
    <description>How often the price should be synced from external API</description>
    <label>Price Sync Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Real-Time</fullName>
            </value>
            <value>
                <fullName>Daily</fullName>
                <default>true</default>
                <label>Daily</label>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>On-Demand</fullName>
                <label>On-Demand Only</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>