force-app/main/default/objects/Supply_Agreement__c/fields/Price_Source__c.field-meta.xml
<CustomField>
    <fullName>Price_Source__c</fullName>
    <description>Which API or source provided the current price</description>
    <label>Price Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OilPriceAPI</fullName>
            </value>
            <value>
                <fullName>EIA</fullName>
                <label>EIA (Energy Information Administration)</label>
            </value>
            <value>
                <fullName>Manual</fullName>
                <label>Manual Entry</label>
            </value>
            <value>
                <fullName>Platts</fullName>
                <label>S&amp;P Global Platts</label>
            </value>
            <value>
                <fullName>OPIS</fullName>
                <label>OPIS (Oil Price Information Service)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>