force-app/main/default/objects/Supply_Agreement__c/fields/Price_Variance_Limit__c.field-meta.xml
<CustomField>
    <fullName>Price_Variance_Limit__c</fullName>
    <defaultValue>5</defaultValue>
    <description>Maximum allowed price variance percentage before alert triggers (e.g., 5.00 = 5%)</description>
    <label>Price Variance Limit %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>