force-app/main/default/objects/Supply_Agreement__c/fields/Term_End__c.field-meta.xml
<CustomField>
    <fullName>Term_End__c</fullName>
    <label>Term End</label>
    <type>Date</type>
</CustomField>