force-app/main/default/objects/Supply_Agreement__c/fields/Term_Start__c.field-meta.xml
<CustomField>
    <fullName>Term_Start__c</fullName>
    <label>Term Start</label>
    <type>Date</type>
</CustomField>